# bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.github/workflows/: build.yml
database/: drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
database/migrations/: 0000_violet_thena.sql  0001_early_guardian.sql  0002_chief_dracula.sql  0003_brown_talkback.sql
database/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
database/src/: index.ts  schema.ts
database/src/globals/: database.ts
src/: database.rs  env.rs  events.rs  main.rs  response.rs  sponsors.rs  utils.rs
src/commands/: mod.rs  status.rs
src/commands/admin/: mod.rs  text_message.rs
src/components/: mod.rs  text_message_roles.rs
src/modals/: mod.rs  text_message.rs  text_message_modify.rs
src/models/: github_message.rs  mod.rs  sent_sponsorship.rs  text_message.rs
src/routes/: github.rs  mod.rs
