[package]
name = "bot-rs"
version = "0.1.3"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
sentry = { version = "0.46.0", default-features = false, features = ["rustls", "reqwest", "backtrace", "contexts", "debug-images", "panic"] }
sentry-tower = { version = "0.46.0", features = ["http", "axum-matched-path"] }
sentry-anyhow = "0.46.0"
axum = "0.8.1"
colored = "3.0.0"
dotenvy = "0.15.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono", "indexmap"] }
utoipa-axum = "0.2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite"] }
chrono = { version = "0.4.40", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "normalize-path"] }
tower = "0.5.2"
tikv-jemallocator = "0.6.0"
anyhow = "1.0.98"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
async-trait = "0.1.89"
octocrab = "0.49.4"
futures = "0.3.31"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
indexmap = { version = "2.12.1", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = "symbols"

[profile.release]
opt-level = "s"
codegen-units = 2
strip = "symbols"
